[package]
name = "routing_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "*"
gloo = "*"
gloo-utils="*"
#wasm_bindgen = "*"
#yew_functional = "*"
wasm-logger = "0.2.0"
log = "*"
yew_styles = { version="0.11", features=["button", "text", "navbar"] }
stylist = "0.10"


muicss-yew = { git = "https://github.com/AlephAlpha/muicss-yew" }